tests/paczka1/fuzzy1/27432510.err
Error in line 1: 6hG A362 11,4
Error in line 19: l0iVUg A247 98,1
Error in line 27: PrH A348 0,4
Error in line 32: 8rpI A383 2,3
